--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,52 @@
 .app {
   display: flex;
   width: 100%;
-  height: 100%;
-  background-color: black;
+  background-color: rgb(16, 16, 16);
 }
 .flexColumn{
   margin-left: 10%;
   width: 90%;
-  height: 200%;
   display: flex;
   flex-direction: column;
+}
+
+.blob{
+  background: rgb(0,206,255);
+  background: linear-gradient(90deg, rgba(0,206,255,1) 0%, rgba(251,50,214,1) 35%, rgba(255,214,0,1) 58%, rgba(70,244,149,1) 79%, rgba(0, 221, 255, 0.774) 93%);
+  height: 500px;
+ aspect-ratio: 1;
+  position:fixed;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  border-radius: 50% ;
+  animation: rotate 20s infinite;
+  z-index: 0;
+  filter: blur(150px);
+  pointer-events: none;
+}
+@keyframes rotate {
+  from{
+    rotate: 0deg;
+  }
+  30%{
+    scale: .9 1.2;
+  }
+  40%{
+    scale: 1.3 1.4;
+  }
+  50%{
+    scale: 1 1.5;
+  }
+  60%{
+    scale: 0.7 2;
+  }
+  70%{
+    scale: 0.8 1.;
+  }
+  to{
+    rotate: 360deg;
+  }
 }
 
 
