--- a/src/components/aboutMe/aboutMeDark.module.css
+++ b/src/components/aboutMe/aboutMeDark.module.css
@@ -1,16 +1,11 @@
 
 
-.canvas{
-  background-color: #000;
-  height: 200%;
-}
-
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
