--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -4,17 +4,12 @@
   box-sizing: border-box;
 }
 
-.canvas{
-    background-color: #000;
-    height: 100%;
-    width: 100vw;
-}
 .flexContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 .description{
