--- a/src/components/home/homeLight.module.css
+++ b/src/components/home/homeLight.module.css
@@ -4,17 +4,14 @@
   box-sizing: border-box;
 }
 
-.canvas{
-    background-color: rgb(246, 246, 246);
-    height: 200%;
-}
 .flexContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
+  background-color: rgb(246, 246, 246);
 }
 .description{
   position: absolute;
