--- a/src/components/portfolio/portfolioDark.module.css
+++ b/src/components/portfolio/portfolioDark.module.css
@@ -1,28 +1,38 @@
-.canvas{
-  background-color: #000;
-  height: 100%;
-}
+
 
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 70em;
   overflow: hidden;
+  flex-direction: column;
 }
 
 .flexContainer2{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+flex-direction: column;
   position: absolute;
   width: 90%;
 }
+
+
+.grid{
+  display: grid;
+  width: 90%;
+  min-height: 1em;
+  grid-template-columns: repeat(3, 22%);
+  grid-auto-rows: 45em;
+  margin-bottom: 10em;
+  justify-content: center;
+  margin-top: 2em;
+  gap: 8em;
+  align-self: center;
+}
+
+.link{text-decoration: none;}
 
 
 .title{
@@ -79,10 +89,11 @@ width: 100%;
     width: 100%;
     justify-content: center;
             gap:5em;
+            text-align: center;
   }
   
   .description p{
-    color:rgba(19, 19, 19);
+    color:rgb(255, 255, 255);
     font-size: 1.3em;
   }
   
@@ -102,25 +113,59 @@ width: 100%;
   }
   
   
+  .category{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 25em;
+    height: 40em;
+    border-radius: 1em;
+}
+
+.img{
+    display: flex;
+    position: relative;
+    align-items: center;
+    width: 100%;
+    height: 10em;
+    justify-content: center;
+}
+
+ .img img{
+    display: flex;
+    width: 50%;
+    border-top-left-radius: 2em;
+    border-top-right-radius: 2em;
+}
+
+.name h1, .name2 h1{
+  font-size: 1.6em;
+  margin-top: 1em !important;
+  color: #fffff6;
+  }
   
-  .pokemon, .taller, .codeLearn{
-  display: -webkit-box;
-  display: -ms-flexbox;
-  position: relative;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 25em;
-  min-height:30em  ;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
+  .name h2, .name2 h2{
+  font-size: 1.4em;
+  color: #fffff6;
+  margin-top: 0;
   }
   
   
+
+  .name{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 20%;
+      align-items: center;
+      justify-content: center;
+      border-bottom-left-radius: 2em;
+      border-bottom-right-radius: 2em;
+      gap: 0em !important;
+  
+  }
+  
+
   .image{
     display: -webkit-box;
   display: -ms-flexbox;
@@ -208,6 +253,40 @@ width: 100%;
           animation-delay: 0s;
 }
 
+
+.category2{
+  display: flex;
+  flex-direction: column;
+  width: 15em;
+  height: 40em;
+  border-radius: 1em;
+  background: none;
+  align-self: center;
+}
+.img2 svg{
+  display: flex;
+  width: 15em;
+  height: 15em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+  border: 1px solid black;
+  border-bottom: none;
+  color: white;
+}
+.name2{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 20%;
+  align-items: center;
+  justify-content: center;
+  background-color: #373737;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
+  border: 1px solid black;
+  border-top: none;
+}
+
 @-webkit-keyframes animate{
   0%{
     top:-5px;
@@ -250,7 +329,7 @@ width: 100%;
   .flexContainer{
     justify-content: center;
     margin-left: 0em;
-    height: 160em;
+    position: relative;
   }
   .flexContainer2{
     margin-left: 0;
@@ -277,6 +356,7 @@ width: 100%;
   .title{
     margin-left: 0;
     width: 80%;
+    top: 0;
   }
 
   .canvas{
@@ -288,5 +368,20 @@ width: 100%;
   }
   .descriptionContainer{
     width: 100vw;
+  }
+
+  .grid{
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+ justify-content: center;
+    gap: 3em;
+    margin-top: 57em;
+    align-self: center;
+    position: relative;
+  }
+  .category2{
+    position: relative;
+margin-top:50em;
   }
 }
