--- a/src/components/portfolio/portfolioLight.module.css
+++ b/src/components/portfolio/portfolioLight.module.css
@@ -1,28 +1,39 @@
-.canvas{
-  background-color: rgb(246, 246, 246);
-  height: 100%;
-}
 
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 70em;
   overflow: hidden;
+  flex-direction: column;
+  background-color: rgb(246, 246, 246);
 }
 
 .flexContainer2{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+flex-direction: column;
   position: absolute;
   width: 90%;
 }
+
+
+.grid{
+  display: grid;
+  width: 90%;
+  min-height: 1em;
+  grid-template-columns: repeat(4, 21%);
+  grid-auto-rows: 45em;
+  margin-bottom: 10em;
+  justify-content: center;
+  margin-top: 2em;
+  gap: 5em;
+  align-self: center;
+}
+
+.link{text-decoration: none;}
+
 
 
 .title{
@@ -84,6 +95,7 @@ display: flex;
 .description p{
   color:rgba(19, 19, 19);
   font-size: 1.3em;
+  text-align: center;
 }
 
 .description a{
@@ -101,6 +113,57 @@ display: flex;
   margin-top: 1.5em;
 }
 
+.category{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 25em;
+  height: 40em;
+  border-radius: 1em;
+}
+
+.img{
+  display: flex;
+  position: relative;
+  align-items: center;
+  width: 100%;
+  height: 10em;
+  justify-content: center;
+}
+
+.img img{
+  display: flex;
+  width: 50%;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+}
+
+.name h1, .name2 h1{
+font-size: 1.6em;
+margin-top: 1em !important;
+color: #2e2e2e;
+}
+
+.name h2, .name2 h2{
+font-size: 1.4em;
+color: #fffff6;
+margin-top: 0;
+}
+
+
+
+.name{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 20%;
+    align-items: center;
+    justify-content: center;
+    border-bottom-left-radius: 2em;
+    border-bottom-right-radius: 2em;
+    gap: 0em !important;
+
+}
 
 
 .pokemon, .taller, .codeLearn{
@@ -208,6 +271,41 @@ color: rgba(19, 19, 19);
           transform: translate(15px, 15px);
   -webkit-animation-delay: 0s;
           animation-delay: 0s;
+}
+
+
+
+.category2{
+  display: flex;
+  flex-direction: column;
+  width: 15em;
+  height: 40em;
+  border-radius: 1em;
+  background: none;
+  align-self: center;
+}
+.img2 svg{
+  display: flex;
+  width: 15em;
+  height: 15em;
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+  border: 1px solid black;
+  border-bottom: none;
+  color: white;
+}
+.name2{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 20%;
+  align-items: center;
+  justify-content: center;
+  background-color: #373737;
+  border-bottom-left-radius: 2em;
+  border-bottom-right-radius: 2em;
+  border: 1px solid black;
+  border-top: none;
 }
 
 @-webkit-keyframes animate{
