--- a/src/components/skills/skillsDark.module.css
+++ b/src/components/skills/skillsDark.module.css
@@ -1,15 +1,10 @@
-.canvas{
-  background-color: #000;
-  height: 200%;
-  width: 100%;
-}
 
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
