--- a/src/components/skills/skillsLight.module.css
+++ b/src/components/skills/skillsLight.module.css
@@ -1,15 +1,12 @@
-.canvas{
-  background-color: rgb(246, 246, 246);
-  height: 200%;
-}
 
 .flexContainer{
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
+  background-color: rgb(246, 246, 246);
 }
 
 .flexContainer2{
