--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,6 +2,9 @@
   display: flex;
   width: 100vw;
   background-image: url("../public/img/fondosolo.png");
+  max-width: 100%; /* Ajusta según tus necesidades */
+  max-height: 100%;
+  overflow:hidden ;
 }
 .flexColumn{
   margin-left: 10%;
