--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -1,4 +1,3 @@
-
 *{
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -16,6 +15,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 .description{
   position: absolute;
@@ -74,6 +74,7 @@
   width: 100%;
   height: 100%;
   transition: transform 0.5s ease; 
+  overflow: hidden;
 }
 
 .planeta1 {
@@ -100,6 +101,14 @@
   right: 0; /* Mueve planeta6 hacia la derecha */
 }
 
+.planetas{
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .asteroidContainer {
   position: absolute;
   left: 0;
@@ -110,7 +119,10 @@
 }
 
 .asteroidContainer img {
+  position: relative;
   max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
   transition: transform 0.5s ease; /* Agrega una transición suave al efecto de zoom */
 }
 
@@ -339,20 +351,20 @@
     *,
     ::before,
     ::after{
-      -webkit-animation-delay: -1ms !important;
-              animation-delay: -1ms !important;
-      -webkit-animation-duration: 1ms !important;
-              animation-duration: 1ms !important;
-      -webkit-animation-iteration-count: 1 !important;
-              animation-iteration-count: 1 !important;
-      background-attachment: initial !important;
-      scroll-behavior: auto !important;
-      -webkit-transition-duration: 0s !important;
-           -o-transition-duration: 0s !important;
-              transition-duration: 0s !important;
-      -webkit-transition-delay: 0s !important;
-           -o-transition-delay: 0s !important;
-              transition-delay: 0s !important;
+      -webkit-animation-delay: -1ms ;
+              animation-delay: -1ms ;
+      -webkit-animation-duration: 1ms ;
+              animation-duration: 1ms ;
+      -webkit-animation-iteration-count: 1 ;
+              animation-iteration-count: 1 ;
+      background-attachment: initial ;
+      scroll-behavior: auto ;
+      -webkit-transition-duration: 0s ;
+           -o-transition-duration: 0s ;
+              transition-duration: 0s ;
+      -webkit-transition-delay: 0s ;
+           -o-transition-delay: 0s t;
+              transition-delay: 0s ;
     }
   }
 
