--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -11,6 +11,11 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-image: url("../../../public/img/fondo.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .description{
   position: absolute;
@@ -23,12 +28,13 @@
           flex-direction: column;
   margin-top: 2.3em;
   height: 35em;
+  z-index: 3;
 }
 .description h3{
   font-size: 2em;
   color: rgba(255, 255, 255, 0.721);
   line-height: 0rem;
-  font-weight: 200;
+  font-weight: 400;
   margin-left: 1.3em;
 }
 
@@ -46,20 +52,82 @@
   line-height: 6rem;
   margin-bottom: 0.4em;
   margin-left: 0.3em;
+  z-index: 5;
 }
-
-.glitch p{
+.glitch1{
+  position: relative;
+  color: whitesmoke;
+  font-size: 6rem;
+  font-weight: bold;
   line-height: 6rem;
+  margin-bottom: 0.4em;
+  margin-left: 0.3em;
+  z-index: 5;
 }
 
-.glitch span{
+
+.first {
+  display: flex;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease; 
+}
+
+.planeta1 {
+  left: 0; /* Mueve planeta1 hacia la izquierda */
+}
+
+.planeta2 {
+  left: 0; /* Mueve planeta2 hacia la izquierda */
+}
+
+.planeta3 {
+  left: 0; /* Mueve planeta3 hacia la izquierda */
+}
+
+.planeta4 {
+  right: 0; /* Mueve planeta4 hacia la derecha */
+}
+
+.planeta5 {
+  right: 0; /* Mueve planeta5 hacia la derecha */
+}
+
+.planeta6 {
+  right: 0; /* Mueve planeta6 hacia la derecha */
+}
+
+.asteroidContainer {
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.asteroidContainer img {
+  max-width: 100%;
+  transition: transform 0.5s ease; /* Agrega una transición suave al efecto de zoom */
+}
+
+
+.glitch p, .glitch1 p{
+  line-height: 6rem;
+  z-index: 8;
+}
+
+.glitch span, .glitch1 span{
   position: absolute;
   top:0;
   left:0;
   line-height: 6rem;
 }
 
-.glitch span:first-child{
+.glitch span:first-child {
   -webkit-animation: glitch 650ms infinite;
           animation: glitch 650ms infinite;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
@@ -69,7 +137,17 @@
           transform: translate(-0.05em, -0.0125em);
   opacity: .8;
 }
-.glitch span:last-child{
+
+
+.glitch1 span:first-child{
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+          clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
+  -webkit-transform: translate(-0.05em, -0.0125em);
+      -ms-transform: translate(-0.05em, -0.0125em);
+          transform: translate(-0.05em, -0.0125em);
+  opacity: .8;
+}
+.glitch span:last-child .glitch1 span:last-child{
   -webkit-animation: glitch 800ms infinite;
           animation: glitch 800ms infinite;
   -webkit-clip-path: polygon(0 80%, 100% 40%, 100% 100%, 0 100%);
@@ -279,26 +357,53 @@
   }
 
   @media (max-width: 768px) {
-    .flexContainer{
+    .flexContainer {
       justify-content: center;
-
+      overflow: hidden;
     }
-    .description{
+  
+    .description {
       width: 100%;
     }
-
-    .description h3{
+  
+    .description h3 {
       line-height: 2rem;
     }
-
-    .glitch{
+  
+    .glitch {
       font-size: 5em;
       width: fit-content;
     }
-    .canvas{
+  
+    .canvas {
       height: 100%;
     }
-    .scrollDown{
+  
+    .scrollDown {
       margin-left: 10%;
     }
-}
+  
+    .first {
+      height: 50%;
+      width: 100%;
+      overflow: hidden;
+      overflow-x: hidden;
+      bottom: 0;
+    }
+  
+    .asteroidContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50%;
+      width: 100%;
+      rotate: 90deg;
+      bottom: 0;
+      overflow: hidden;
+    }
+
+    .asteroidContainer img{
+      height: 100%;
+      
+    }
+  }
