--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -67,13 +67,19 @@
 
 
 .first {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: absolute;
   left: 0;
   z-index: 1;
   width: 100%;
   height: 100%;
-  transition: transform 0.5s ease; 
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease; 
   overflow: hidden;
 }
 
@@ -123,7 +129,11 @@
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
-  transition: transform 0.5s ease; /* Agrega una transición suave al efecto de zoom */
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease; /* Agrega una transición suave al efecto de zoom */
 }
 
 
@@ -370,11 +380,11 @@
 
   @media (max-width: 768px) {
     .flexContainer {
-      justify-content: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       overflow: hidden;
-      background-attachment: fixed;
-      background-position: center;
-      background-size: contain;
+      
     }
   
     .description {
@@ -387,6 +397,8 @@
   
     .glitch {
       font-size: 5em;
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       width: fit-content;
     }
   
@@ -407,9 +419,15 @@
     }
   
     .asteroidContainer {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       height: 50%;
       width: 100%;
       rotate: 90deg;
