--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -9,7 +9,6 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
   background-image: url("../../../public/img/fondo.png");
   background-attachment: fixed;
   background-position: center;
@@ -385,6 +384,8 @@
               justify-content: center;
       overflow: hidden;
       z-index: 3;
+      width: 100%;
+      height: 100%;
       
     }
   
