--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -383,9 +383,8 @@
           -ms-flex-pack: center;
               justify-content: center;
       overflow: hidden;
+      background-size: 100% 100%;
       z-index: 3;
-      width: 100%;
-      height: 100%;
       
     }
   
