--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -382,8 +382,8 @@
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
+              background-image: url("../../../public/img/fondophone.png");
       overflow: hidden;
-      background-size: 100% 100%;
       z-index: 3;
       
     }
