--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -384,6 +384,7 @@
               justify-content: center;
               background-image: url("../../../public/img/fondophone.png");
       overflow: hidden;
+      background-size: 100% 100%;
       z-index: 3;
       
     }
