--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -387,6 +387,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
+      z-index: 3;
       
     }
   
