--- a/src/components/home/homeDark.module.css
+++ b/src/components/home/homeDark.module.css
@@ -382,11 +382,9 @@
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
+              background-attachment: none;
               background-image: url("../../../public/img/fondophone.png");
       overflow: hidden;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
       z-index: 3;
       
     }
